Add lambda:TagResource to API stack
Add lambda:TagsResource tp API stack for cluster creation and image creation
Because Lambda will require an additional lambda:TagResource policy starting from May31 when create Lambda functions with resource tags

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -611,6 +611,7 @@ Resources:
                   - s3.data-source.lustre.fsx.amazonaws.com
           - Action:
               - lambda:CreateFunction
+              - lambda:TagResource
               - lambda:DeleteFunction
               - lambda:GetFunctionConfiguration
               - lambda:GetFunction
@@ -734,6 +735,7 @@ Resources:
             Effect: Allow
             Action:
               - lambda:CreateFunction
+              - lambda:TagResource
               - lambda:GetFunction
               - lambda:AddPermission
             Resource:
