Add missing policies for lambda update performed through CFN
Starting from May 2022, lambda is enforcing the usage of lambda:ListTags, lambda:TagResource, and lambda:UntagResource policies to be able to perform the update of a lambda function deployed through CloudFormation

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -620,6 +620,8 @@ Resources:
               - lambda:AddPermission
               - lambda:RemovePermission
               - lambda:UpdateFunctionConfiguration
+              - lambda:ListTags
+              - lambda:UntagResource
             Resource:
               - !Sub arn:${AWS::Partition}:lambda:${Region}:${AWS::AccountId}:function:parallelcluster-*
               - !Sub arn:${AWS::Partition}:lambda:${Region}:${AWS::AccountId}:function:pcluster-*
