Add EnableMemoryBasedScheduling config parameter.
The parameter enables memory-based scheduling in Slurm.

Add examples of the new parameter in example config files.

Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -54,6 +54,7 @@ Scheduling:
     Dns:
       DisableManagedDns: true
       UseEc2Hostnames: true
+    EnableMemoryBasedScheduling: false
   SlurmQueues:
     - Name: queue1
       CapacityType: ONDEMAND
