Do not test FSx security groups when using AWS Batch
FSx is not yet supported when using AWS Batch as a scheduler.
Change introduced with commit 439dc58f422c90dfd959ed33b161ae7a4d41c658

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
@@ -33,9 +33,11 @@ SharedStorage:
   - MountDir: efs
     Name: efs
     StorageType: Efs
+  {% if scheduler != "awsbatch" %}
   - MountDir: fsx
     Name: fsx
     StorageType: FsxLustre
     FsxLustreSettings:
       StorageCapacity: 1200
       DeploymentType: SCRATCH_2
+  {% endif %}
