Add ODCR to p4d test

--- a/tests/integration-tests/configs/p4d.yaml
+++ b/tests/integration-tests/configs/p4d.yaml
@@ -1,5 +1,5 @@
 {%- import 'common.jinja2' as common -%}
-{%- set regions = ["us-west-2"] -%}
+{%- set regions = ["us-east-1"] -%}
 {%- set instances = ["p4d.24xlarge"] -%}
 
 ---
