--- a/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
+++ b/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
@@ -9,6 +9,18 @@ HeadNode:
     KeyName: {{ key_name }}
   Imds:
     Secured: {{ imds_secured }}
+{% if instance == "p4d.24xlarge" %}
+  Iam:
+    # Needed to use the p4d capacity reservation 
+    AdditionalIamPolicies:
+      - Policy: arn:aws:iam::aws:policy/AmazonEC2FullAccess
+    S3Access:
+      - BucketName: {{ bucket_name }}
+        EnableWriteAccess: false
+  CustomActions:
+    OnNodeConfigured:
+      Script: s3://{{ bucket_name }}/run_instance_override.sh
+{% endif %}
 Scheduling:
   Scheduler: {{ scheduler }}
   SlurmQueues:
