--- a/tests/integration-tests/tests/efa/test_efa/test_hit_efa/pcluster.config.ini
+++ b/tests/integration-tests/tests/efa/test_efa/test_hit_efa/pcluster.config.ini
@@ -11,6 +11,12 @@ vpc_settings = parallelcluster-vpc
 scheduler = {{ scheduler }}
 master_instance_type = {{ head_node_instance }}
 queue_settings = efa-enabled
+{% if instance == "p4d.24xlarge" %}
+# Needed to use the p4d capacity reservation 
+additional_iam_policies = arn:aws:iam::aws:policy/AmazonEC2FullAccess
+post_install = s3://{{ bucket_name }}/run_instance_override.sh
+s3_read_resource = arn:aws:s3:::{{ bucket_name }}/*
+{% endif %}
 
 [queue efa-enabled]
 compute_resource_settings = efa-enabled_i1
