Add validator for MemoryInfo from EC2 API
Prevent cluster creation/update if memory information is not available from EC2 API

Add unit tests for new validator

Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/cli/tests/pcluster/validators/test_all_validators/test_all_validators_are_called/slurm_2.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_all_validators_are_called/slurm_2.yaml
@@ -9,6 +9,8 @@ HeadNode:
     AllowedIps: 1.2.3.4/32
 Scheduling:
   Scheduler: slurm
+  SlurmSettings:
+    EnableMemoryBasedScheduling: true
   SlurmQueues:
     - Name: queue1
       CapacityType: ONDEMAND
