Move c5n.18xlarge to run only in develop

--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -10,6 +10,13 @@ test-suites:
 {% filter indent(2) %}
 {% include 'common/common.yaml' %}
 {% endfilter %}
+  efa:
+    test_efa.py::test_efa:
+      dimensions:
+        - regions: ["sa-east-1"]
+          instances: ["c5n.18xlarge"]
+          oss: ["alinux2"]
+          schedulers: ["slurm"]
   # need to duplicate api section because test_official_images works only after release
   pcluster_api:
     test_api_infrastructure.py::test_api_infrastructure_with_default_parameters:
