Expose internal memory-based scheduling parameters as Chef parameters
Allow overriding default values via ExtraChefAttributes in DevSettings

Add unit tests for custom value of realmemory_to_ec2memory_ratio

Add validation for realmemory_to_ec2memory_ratio

Add integration test for node_reg_mem_percent and realmemory_to_ec2memory_ratio

Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -213,7 +213,7 @@ DevSettings:
   Cookbook:
     ChefCookbook: https://tests/aws-parallelcluster-cookbook-3.0.tgz
     ExtraChefAttributes: |
-      {"cluster": {"scheduler_slots": "cores"}}
+      {"cluster": {"scheduler_slots": "cores", "slurm_node_reg_mem_percent": 75, "realmemory_to_ec2memory_ratio": 0.95}}
   AwsBatchCliPackage: s3://test/aws-parallelcluster-batch-3.0.tgz
   NodePackage: s3://test/aws-parallelcluster-node-3.0.tgz
   AmiSearchFilters:
