Add integration tests for RealMemory override via config file parameter
Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_memory_based_scheduling/pcluster.config.update_scheduling.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_memory_based_scheduling/pcluster.config.update_scheduling.yaml
@@ -24,6 +24,10 @@ Scheduling:
           MinCount: 1
         - Name: ondemand1-i2
           InstanceType: {{ instance }}
+        - Name: ondemand1-i3
+          InstanceType: c5.4xlarge
+          MinCount: 0
+          SchedulableMemory: 31400
 SharedStorage:
   - MountDir: /shared
     Name: name1
