--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -17,6 +17,18 @@ test-suites:
           instances: ["c5n.18xlarge"]
           oss: ["alinux2"]
           schedulers: ["slurm"]
+        - regions: ["us-east-1"]
+          instances: ["p4d.24xlarge"]
+          oss: ["alinux2"]
+          schedulers: ["slurm"]
+        - regions: ["us-west-2"]
+          instances: ["c6gn.16xlarge"]
+          oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
+          schedulers: ["slurm"]
+        - regions: [ "us-east-2" ]
+          instances: [{{ common.instance("instance_type_1") }}]
+          oss: [ "alinux2", "centos7", "ubuntu2004" ]
+          schedulers: [ "slurm" ]
   # need to duplicate api section because test_official_images works only after release
   pcluster_api:
     test_api_infrastructure.py::test_api_infrastructure_with_default_parameters:
